# BreakingWalls

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.gradle  physics.json  settings.gradle
.github/workflows/: cmake-single-platform.yml  gradle.yml
cmake/: buildinfo.h.in
defold/: README.md  game.project
defold/assets/: player.atlas  tiles.atlas  ui.atlas
defold/gui/: hud.go  hud.gui  hud.gui_script  menu.go  menu.gui  menu.gui_script
defold/main/: audio.go  audio.script  camera.go  camera.script  controller.go  controller.script  game.input_binding  main.collection  maze_factory.go  player_factory.go
defold/materials/: screen.material  sprite.material  tile.material
defold/maze/: maze.go  maze.script  maze_gen.lua  tile_exit.go  tile_exit.script  tile_floor.go  tile_pickup.go  tile_pickup.script  tile_wall.go
defold/player/: player.go  player.script
defold/render/: iso_render.render  iso_render.render_script
defold/shaders/: screen.fp  screen.vp  sprite.fp  sprite.vp  tile.fp  tile.vp
models/: 77613 - LICENSE.html  stylized-character.glb
resources/: physics.json
scripts/: breakingwalls_run.bat
shaders/: billboard.frag.glsl  billboard.geom.glsl  billboard.vert.glsl  block_fragment.glsl  composite.frag.glsl  composite.vert.glsl  debug.frag.glsl  goal.frag.glsl  goal.vert.glsl  highlight_tile.frag.glsl  highlight_tile.vert.glsl  maze.vert.glsl  model.frag.glsl  model.vert.glsl  motion_blur.frag.glsl  motion_blur.vert.glsl  oit_resolve.frag.glsl  oit_resolve.vert.glsl  output.frag.glsl  particles.cs.glsl  particles.frag.glsl  particles.vert.glsl  pathtracer.cs.glsl  pathtracer_output.frag.glsl  pathtracer_tonemap.frag.glsl  preview.frag.glsl  shadow.frag.glsl  shadow.geom.glsl  shadow.vert.glsl  skinned.frag.glsl  skinned.vert.glsl  sky.frag.glsl  sky.vert.glsl  sky_fragment.glsl  sky_vertex.glsl  softShadowKernel.cs.glsl  stencil_outline.frag.glsl  tile.frag.glsl  tonemap.frag.glsl  voronoi.frag.glsl  (+1 more)
shaders/common/: anyhit.glsl  closest_hit.glsl  uniforms.glsl
shaders/es/: sky_fragment.es.glsl  sky_vertex.es.glsl
src/: Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  AudioHelper.cpp  AudioHelper.hpp  BVH.cpp  BVH.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Events.hpp  Font.cpp  Font.hpp  FramebufferObject.cpp  FramebufferObject.hpp  GLSDLHelper.cpp  GLSDLHelper.hpp  GLTFModel.cpp  GLTFModel.hpp  GLUtils.cpp  GLUtils.hpp  GameState.cpp  GameState.hpp  HttpClient.cpp  HttpClient.hpp  JSONUtils.hpp  JsonUtils.hpp  Level.cpp  Level.hpp  Light.cpp  Light.hpp  LoadingState.cpp  LoadingState.hpp  Loggable.hpp  Main.cpp  MatchController.hpp  Material.cpp  (+74 more)
src/main/java/com/flipsandale/: BreakingWallsApplication.java
src/main/java/com/flipsandale/controller/: Converter.java  LevelController.java
src/main/java/com/flipsandale/dto/: GameSettings.java  MazeRequest.java  MazeResponse.java
src/main/java/com/flipsandale/game/: AudioManager.java  BaseScreenController.java  Command.java  CommandQueue.java  FallingStateManager.java  GameCountdownManager.java  GameLauncher.java  GameMode.java  GameOverScreenController.java  GameState.java  GameStateService.java  GameUIManager.java  GameplayHUDScreenController.java  HUDLayer.java  HUDManager.java  HapticFeedbackService.java  HelpScreenController.java  InfiniteMazeManager.java  InputManager.java  LevelProgressionService.java  MainMenuScreenController.java  MaterialManager.java  MazeGameApp.java  MazeWallService.java  ModeSelectScreenController.java  NiftyInputProtector.java  OptionsScreenController.java  PauseMenuScreenController.java  Platform.java  PlatformGeneratorService.java  PlatformLayout.java  PlayerController.java  SafeNiftyJmeDisplay.java  ScreenController.java
src/main/java/com/flipsandale/game/state/: CameraController.java  FallingState.java  GameOverState.java  GameState.java  GameStateFactory.java  GameStateId.java  GameStateStack.java  MenuState.java  PausedState.java  PlayingState.java  StateContext.java
src/main/java/com/flipsandale/gui/: GameUIManager.java  HelpScreenController.java  NiftyGuiBuilder.java  OptionsScreenController.java  PauseMenuScreenController.java
src/main/java/com/flipsandale/service/: CornersService.java  GameSettingsManager.java  MazeService.java
src/main/resources/: application.properties  screens.xml
textures/: app_icon.rc
